<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsEcran"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/param_tres"
        android:textColor="@color/textApp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <LinearLayout
            android:id="@+id/jeu_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/jeu_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Jeu"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tuto_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:background="@color/fondBoutonsApp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/tutoriel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textApp"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <LinearLayout
            android:id="@+id/interface_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/interface_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Interface"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/couleur_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:background="@color/fondBoutonsApp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/couleur"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textApp"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/retour_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/fondBoutonsApp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/retour"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/textApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>